file upload works

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <title>calenderstats.js</title>
     <script src="js/library/ical.js/ical.js"></script>
     <script src="js/library/jquery/jquery.min.1.12.4.js"></script>
-    <link rel="stylesheet" href="js/library/datatables/datatables.min.css">
     <script src="js/library/datatables/datatables.js"></script>
-    <script src="calenderstats.js"></script>
+    
+    <script src="js/calenderstats_feature_check.js"></script>
+    <script src="js/calenderstats_do.js"></script>
+
+    <link rel="stylesheet" href="js/library/datatables/datatables.min.css">
     <style>
       body>div {
         width: 99%;
@@ -19,15 +22,6 @@
   </head>
 
   <body>
-    <script>
-      // Check for the various File API support.
-      if (window.File && window.FileReader && window.FileList && window.Blob) {
-        // Great success! All the File APIs are supported.
-      } else {
-        alert('The File APIs are not fully supported in this browser.');
-      }
-    </script>
-
     <div id="fileupload">
 
       <div>
@@ -39,42 +33,6 @@
       </div>
 
     </div>
-
-    <script>
-      function handleFileSelect(evt) {
-        var files = evt.target.files; // FileList object
-
-        // Loop through the FileList and render image files as thumbnails.
-        for (var i = 0, f; f = files[i]; i++) {
-
-          var reader = new FileReader();
-
-          // Closure to capture the file information.
-          reader.onload =
-            (
-              function (theFile) {
-                return function (e) {
-                  var span = document.createElement('span');
-                  span.innerHTML =
-                    [
-                      '<div>',
-                      escape(theFile.name),
-                      '</div>',
-                    ].join('');
-                  document.getElementById('list').insertBefore(span, null);
-                  
-                  cal_data = e.target.result; 
-                };
-              }
-            )(f);
-
-          // Read in the image file as a data URL.
-          reader.readAsText(f);
-        }
-      }
-
-      document.getElementById('files').addEventListener('change', handleFileSelect, false);
-    </script>
 
     <div id="calenderstats">
       <table id="table_id" class="display">
@@ -97,74 +55,6 @@
     </div>
 
 
-    <script>
-
-      var vcalendar;
-      var vevent;
-      var iCalendarData = "";
-
-      $(document).ready(
-        function () {
-
-          var table = $('#table_id').DataTable();
-
-          var jcalData;
-          var summary;
-
-          jQuery.get("dings.ical", function (data) {
-
-            // prepare data 
-            iCalendarData = data;
-            jcalData = ICAL.parse(iCalendarData);
-            vcalendar = new ICAL.Component(jcalData);
-            vevent = vcalendar.getFirstSubcomponent('vevent');
-
-            // get variables from data
-            summary = vevent.getFirstPropertyValue('summary');
-            start = vevent.getFirstPropertyValue('dtstart');
-            end = vevent.getFirstPropertyValue('end');
-
-
-            var summaries = vcalendar
-              .getAllSubcomponents()
-              .map(function (x) { return x.getFirstPropertyValue("summary"); })
-
-            var starts = vcalendar
-              .getAllSubcomponents()
-              .map(function (x) { return Date.parse(x.getFirstPropertyValue("dtstart")); })
-
-            var ends = vcalendar
-              .getAllSubcomponents()
-              .map(function (x) { return Date.parse(x.getFirstPropertyValue("dtend")); })
-
-            // fill table with variables
-            for (let index = 0; index < summaries.length; index++) {
-              const element = summaries[index];
-              if (element === null) {
-                // do nothing
-              } else {
-                table.row.add(
-                  [
-                    summaries[index],
-                    starts[index],
-                    ends[index],
-                    (ends[index] - starts[index]) / 60000
-                  ]
-                );
-              }
-            }
-
-            // draw table
-            table.draw(false);
-          });
-
-
-        }
-      );
-
-
-
-    </script>
 
   </body>
 
