--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </div>
       
       <div class="content-box">
+        These are data filters - to be implemented yet - no function so far
         <input type="date" id="from_date" name="From">
         <input type="date"   id="to_date" name="To">
       </div>
