--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <html>
 
   <head>
+    <!-- Info -->
     <title>calenderstats.js</title>
+
+    <!-- JS libraries -->
     <script src="js/library/ical.js/ical.js"></script>
     <script src="js/library/jquery/jquery.min.1.12.4.js"></script>
     <script src="js/library/datatables/datatables.js"></script>
     <script src="js/library/moment.js/moment.js-2.22.2.js"></script>
 
+    <!-- JS scripts -->
     <script src="js/calenderstats_feature_check.js"></script>
     <script src="js/calenderstats_do.js"></script>
+    <script src="js/tools.js"></script>
 
+    <!-- css -->
     <link href="font/fontawesome-all.css" rel="stylesheet">
     <link rel="stylesheet" href="js/library/datatables/datatables.min.css">
-    <link rel="stylesheet" href="style/simple-grid.css">
     <link rel="stylesheet" href="style/base.css">
   </head>
 
@@ -20,8 +25,13 @@
     <!-- BODY ------------------------------------------------------------------ -->
 
     <div class="sidenav">
-      <a href="https://magicnoise.com/">magicnoise.com</a>
-      <a href="https://petermeissner.de">petermeissner.de</a>
+      <div class="sidenav-header" style="min-width:140px">
+      </div>
+      <div class="sidenav-footer">
+        <a href="https://magicnoise.com/">magicnoise.com</a>
+        <a href="https://petermeissner.de">petermeissner.de</a>
+      </div>
+
     </div>
 
     <div class="mainbar">
@@ -47,14 +57,14 @@
       </div>
       
       <div class="content-box">
-        These are data filters - to be implemented yet - no function so far
+        <label style="padding-right:1em;" for="from_date">From: </label>
         <input type="date" id="from_date" name="From">
+        <label style="padding-left: 1em; padding-right:1em;" for="to_date">To:</label>
         <input type="date"   id="to_date" name="To">
       </div>
   
   
       <div id="calenderstats" class="content-box">
-         
 
         <div class="content">
   
@@ -96,6 +106,10 @@
     <script>
       /* add stats update handler function */
       $(".stats").on("click", function () { calender_stats(); });
+
+      /* initialize default date values */
+      $("#from_date")[0].value = last_month_start()
+      $("#to_date")[0].value = last_month_end()
     </script>
 
   </body>
